--- a/eShopSolution.Data/eShopSolution.Data.csproj
+++ b/eShopSolution.Data/eShopSolution.Data.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210121073325_AspNetCoreIdentityDatabase.cs" />
+    <Compile Remove="Migrations\20210121073325_AspNetCoreIdentityDatabase.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
